v3.6.6 (XXXX-XX-XX)
-------------------

* Fixed issue ES-664: the optimizer rule `inline-subqueries` must not pull out
  subqueries that contain a COLLECT statement if the subquery is itself called
  from within a loop. Otherwise the COLLECT will be applied to the values in the
  outer FOR loop, which can produce a different result.

* Updated arangosync to 0.7.9.

* Fixed hotbackup S3 credentials validation and error reporting for upload
  and download (BTS-162).

* Fix: The 'sorted' COLLECT variant would return undefined instead of null when
  grouping by a null value.

* Fix: writeConcern is now honored correctly (ES-655).

* Fixed internal issue #739: ArangoSearch filter volatility takes into account
  calculation nodes dependencies.

* Slightly fixed wrong log level for authentication and also added login event
  to the standard log.

* Fixed OASIS-278 issue: Added proper sort/calc nodes cleanup for late
  materialzation after OneShard optimization.

* Fixed a blockage on hotbackup when writes are happening concurrently, since
  followers could no longer replicate leader transactions.

* Fixed issue #12349: arangosh compact Arangoerror 404.

* Always fetch data for /_api/cluster/agency-dump from leader of the agency.
  Add option "redirectToLeader=true" to internal /_api/agency/state API.

* Fixed issue #12297: ArangoDB 3.6.5 Swagger Error?
  This issue caused the Swagger UI for displaying the APIs of user-defined Foxx 
  services to remain invisible in the web UI, because of a JavaScript exception.
  This PR fixes the JavaScript exception, so the services API is displayed
  again properly.

* Fixed issue #12248: Web UI on 3.6.5: 404 error on adding new index.
  This issue caused "404: not found" errors when creating indexes via the web
  UI. The indexes were created successfully despite the error message popping
  up. This fix removes the misleading unconditional error message.

* Revive faster out-of-range comparator for secondary index scans that do a full