@@ -1,6 +1,9 @@
 v3.6.6 (XXXX-XX-XX)
 -------------------
 
+* Make AQL user-defined functions (UDFs) work in a cluster in case the UDF runs
+  an AQL query inside its own function code.
+
 * Fixed issue ES-664: the optimizer rule `inline-subqueries` must not pull out
   subqueries that contain a COLLECT statement if the subquery is itself called
   from within a loop. Otherwise the COLLECT will be applied to the values in the
